--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   bloc: ^8.1.1
   flutter_bloc: ^8.1.2
+  modal_progress_hud_nsn: ^0.3.0
 
 dev_dependencies:
   flutter_test:
